feat: fix database
